Check the shared pointer before dereferencing

BUG:379113